force-app/main/default/objects/JsonData__c/JsonData__c.object-meta.xml
<CustomObject>
    <description>To be Deprecated: This object is used to track the attendance of patients in a group event.</description>
    <label>JsonData</label>
    <nameField>
        <displayFormat>Json-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JsonDatas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>