force-app/main/default/objects/JsonData__c/fields/JsonData__c.field-meta.xml
<CustomField>
    <fullName>JsonData__c</fullName>
    <label>JsonData</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>